--- a/src/app/pages/galleries-page/galleries-page.component.scss
+++ b/src/app/pages/galleries-page/galleries-page.component.scss
@@ -1,5 +1,6 @@
 .gallery-item {
     position: relative;
+    cursor: pointer;
 }
 
 .gallery-info {
@@ -8,11 +9,24 @@
     position: absolute;
     width: 100%;
     bottom: 0;
-    display: none;
-    transition: 0.2s all ease;
+    opacity: 0;
+    height: 0px;
+}
+
+.gallery-info span {
+    text-overflow: ellipsis;
+}
+
+.gallery-item:hover {
+    transition: 0.2s all cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
 .gallery-item:hover .gallery-info{
-    display: block;
-    transition: 0.2s all ease;
+    opacity: 1;
+    transition: 0.2s all cubic-bezier(0.65, 0.05, 0.36, 1);
+    height: auto;
+}
+
+.gallery-item img {
+    
 }
