Stretches images in gallery

--- a/src/app/components/gallery-item/gallery-item.component.html
+++ b/src/app/components/gallery-item/gallery-item.component.html
@@ -2,5 +2,5 @@
     <div class="gallery-info p-2 flex">
         <span class="basis-full">{{galleryItem.name}}</span>
     </div>
-    <img src="{{galleryItem.image}}" objectFit="cover" alt="{{galleryItem.name}}">
+    <img src="{{galleryItem.image}}" alt="{{galleryItem.name}}">
 </div>
