--- a/src/app/components/photo-gallery/photo-gallery.component.html
+++ b/src/app/components/photo-gallery/photo-gallery.component.html
@@ -1,5 +1,8 @@
 <div class="container mx-auto">
-    <div class="grid-cols-2 p-4 space-y-2 lg:space-y-0 lg:grid lg:gap-3">
-        <app-gallery-item *ngFor="let photo of photos | async" [galleryItem]="photo" [ngClass]="{'row-span-2': photo.orientation === 'Portrait'}"></app-gallery-item>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 items-stretch p-3 lg:p-0">
+        <app-gallery-item *ngFor="let photo of photos | async" 
+            [galleryItem]="photo" 
+            [ngClass]="{'row-span-2': photo.orientation === 'Portrait'}">
+        </app-gallery-item>
     </div>
 </div>
