Adds trips to nav bar and changes name to CKM

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,10 +1,11 @@
 <nav id="header" class="fixed w-full z-30 top-0 border-b">
     <div class="flex flex-row justify-between p-6">
-        <a routerLink="/"><h1 class="basis-1/4 uppercase text-xl">CK Photography</h1></a>
+        <a routerLink="/"><h1 class="basis-1/4 uppercase text-xl">CKM Photography</h1></a>
         <!-- ToDo: Mobile menu -->
         <div class="basis-2/4 flex justify-center hidden md:flex">
             <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/gallery">Gallery</button>
-            <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about">About</button>
+            <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about">Trips</button>
+            <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog">About</button>
             <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog">Blog</button>
         </div>
         <div class="basis-1/4 flex justify-end hidden md:flex" id="socials">
