Adds user info to portfolio items

--- a/src/app/components/gallery-item/gallery-item.component.html
+++ b/src/app/components/gallery-item/gallery-item.component.html
@@ -1,6 +1,10 @@
 <div class="gallery-item">
-    <div class="gallery-info p-2 flex">
+    <div class="gallery-info gallery-item-info p-2 top-0">
         <span class="basis-full">{{galleryItem.name}}</span>
     </div>
     <img src="{{galleryItem.image}}" alt="{{galleryItem.name}}">
+    <div class="gallery-item-author-info gallery-item-info bottom-0 p-2" *ngIf="galleryItem.author">
+        <img class="persona" src="../../../assets/persona/{{galleryItem.author}}.jpg">
+        <span>{{galleryItem.author}}</span>
+    </div>
 </div>
