--- a/src/app/components/gallery-item/gallery-item.component.scss
+++ b/src/app/components/gallery-item/gallery-item.component.scss
@@ -3,19 +3,21 @@
     cursor: pointer;
     height: 100%;
     background-color: #212121; // ToDo: Image loading gradient?
-}
-
-.gallery-info {
     color: white;
-    background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.6) 100%);
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    opacity: 0;
-    height: 0px;
 }
 
-.gallery-info span {
+.gallery-item-info {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    height: 50px;
+    max-height: 0px;
+    width: 100%;
+    background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.6) 100%);
+    opacity: 0;
+}
+
+.gallery-item-info span {
     text-overflow: ellipsis;
 }
 
@@ -23,13 +25,20 @@
     transition: 0.2s all cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 
-.gallery-item:hover .gallery-info{
+.gallery-item:hover .gallery-item-info {
     opacity: 1;
     transition: 0.2s all cubic-bezier(0.65, 0.05, 0.36, 1);
-    height: auto;
+    max-height: 75px;
 }
 
 .gallery-item img {
     height: 100%;
     object-fit: cover;
+}
+
+.persona {
+    height: 30px !important;
+    width: 30px;
+    border-radius: 50%;
+    margin-right: 8px;
 }
