--- a/src/app/components/gallery-item/gallery-item.component.scss
+++ b/src/app/components/gallery-item/gallery-item.component.scss
@@ -6,6 +6,14 @@
     color: white;
 }
 
+.gallery-info {
+    background: linear-gradient(rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%);
+}
+
+.gallery-item-author-info {
+    background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.6) 100%);
+}
+
 .gallery-item-info {
     display: flex;
     align-items: center;
@@ -13,7 +21,6 @@
     height: 50px;
     max-height: 0px;
     width: 100%;
-    background: linear-gradient(transparent 0%, rgba(0, 0, 0, 0.6) 100%);
     opacity: 0;
 }
 
