--- a/src/app/components/gallery-item/gallery-item.component.scss
+++ b/src/app/components/gallery-item/gallery-item.component.scss
@@ -1,9 +1,9 @@
 .gallery-item {
     position: relative;
     cursor: pointer;
-    height: 100%;
-    background-color: #212121; // ToDo: Image loading gradient?
+    height: 100%; 
     color: white;
+    min-height: 240px;
 }
 
 .gallery-info {
