--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,11 +1,11 @@
 <nav id="header" class="fixed w-full z-30 top-0 border-b">
     <div class="flex flex-row justify-between p-6">
         <div class="basis-1/4">
-            <a routerLink="/"><h1 class="uppercase text-xl">CKM Photography</h1></a>
+            <a routerLink="/" (click)="isMenuOpen = false"><h1 class="uppercase text-xl">CKM Photography</h1></a>
         </div>
         <!-- ToDo: Mobile menu -->
         <section class="mobile-menu md:hidden">
-            <input class="checkbox" type="checkbox" name="" id="" />
+            <input class="checkbox" type="checkbox" name="menu-open" id="open-menu" [(ngModel)]="isMenuOpen" />
             <div class="space-y-2 hamburger-lines" id="hamburger-menu-icon">
                 <span class="block w-7 h-0.5 bg-gray-600 line1"></span>
                 <span class="block w-7 h-0.5 bg-gray-600 line2"></span>
@@ -13,10 +13,10 @@
             </div>
 
             <div class="mobile-menu-items mt-9">
-                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/gallery">Gallery</button>
-                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about">Trips</button>
-                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog">About</button>
-                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog">Blog</button>
+                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/gallery" (click)="isMenuOpen = false">Gallery</button>
+                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about" (click)="isMenuOpen = false">Trips</button>
+                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog" (click)="isMenuOpen = false">About</button>
+                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog" (click)="isMenuOpen = false">Blog</button>
             </div>
         </section>
 
