--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -36,21 +36,39 @@ nav .checkbox {
     z-index: 5;
     opacity: 0;
     cursor: pointer;
-  }
+}
 
 .mobile-menu-items{
-    background-color: #212121;
+    background-color: white;
     position: absolute;
     display: flex;
     flex-direction: column;
     right: 0;
     width: 100%;
     height: calc(100vh - 104px);
-    color: white;
     transform: translateX(500px);
     transition: transform 0.5s ease-in-out;
+    padding: 0px 32px 32px 32px;
 }
 
+.mobile-menu-items button {
+    border-bottom: 1px solid #212121;
+    padding: 32px;
+}
+
+#hamburger-menu-icon .line1 {
+    transform-origin: 0% 0%;
+    transition: transform 0.4s ease-in-out;
+}
+  
+#hamburger-menu-icon .line2 {
+    transition: transform 0.2s ease-in-out;
+}
+  
+#hamburger-menu-icon .line3 {
+    transform-origin: 0% 100%;
+    transition: transform 0.4s ease-in-out;
+}
 
 nav input[type="checkbox"]:checked ~ .mobile-menu-items {
     transform: translateX(0);
@@ -68,22 +86,3 @@ nav input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     transform: rotate(-45deg);
 }
   
-
-.mobile-menu-items button {
-    border-bottom: 1px solid white;
-    padding: 32px;
-}
-
-#hamburger-menu-icon .line1 {
-    transform-origin: 0% 0%;
-    transition: transform 0.4s ease-in-out;
-}
-  
-#hamburger-menu-icon .line2 {
-    transition: transform 0.2s ease-in-out;
-}
-  
-#hamburger-menu-icon .line3 {
-    transform-origin: 0% 100%;
-    transition: transform 0.4s ease-in-out;
-}
