--- a/src/app/components/gallery-item/gallery-item.component.scss
+++ b/src/app/components/gallery-item/gallery-item.component.scss
@@ -7,6 +7,7 @@
 }
 
 .gallery-info {
+    z-index: 2;
     background: linear-gradient(rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
@@ -38,9 +39,16 @@
     max-height: 75px;
 }
 
-.gallery-item img {
-    height: 100%;
+.gallery-item-loaded-content  {
+    display: flex;
+}
+
+.gallery-item-loaded-content > img {
+    position: relative;
+    // height: 100%;
     object-fit: cover;
+    // width: 100%;
+    // max-height: 100%;
 }
 
 .persona {
