--- a/src/app/components/gallery-item/gallery-item.component.scss
+++ b/src/app/components/gallery-item/gallery-item.component.scss
@@ -1,9 +1,18 @@
 .gallery-item {
     position: relative;
     cursor: pointer;
-    height: 100%; 
+    height: 100%;
     color: white;
     min-height: 240px;
+}
+
+.gallery-title {
+    max-height: 75px;
+}
+
+.gallery-info-animationable {
+    opacity: 0;
+    max-height: 0px;
 }
 
 .gallery-info {
@@ -16,13 +25,12 @@
 }
 
 .gallery-item-info {
+    z-index: 2;
     display: flex;
     align-items: center;
     position: absolute;
     height: 50px;
-    max-height: 0px;
     width: 100%;
-    opacity: 0;
 }
 
 .gallery-item-info span {
@@ -39,11 +47,11 @@
     max-height: 75px;
 }
 
-.gallery-item-loaded-content  {
+.gallery-item-loaded-content {
     display: flex;
 }
 
-.gallery-item-loaded-content > img {
+.gallery-item-loaded-content>img {
     position: relative;
     // height: 100%;
     object-fit: cover;
