--- a/src/app/pages/galleries-page/galleries-page.component.html
+++ b/src/app/pages/galleries-page/galleries-page.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto">
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 p-3">
-        <app-gallery-item *ngFor="let gallery of galleries" [galleryItem]="gallery" routerLink="{{gallery.id}}"></app-gallery-item>
+        <app-gallery-item *ngFor="let gallery of galleries" [galleryItem]="gallery" [isGallery]="true" routerLink="{{gallery.id}}"></app-gallery-item>
     </div>
 </div>
