--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-nav-bar></app-nav-bar>
-<div class="mt-24" id="content-container">
+<app-nav-bar class="fixed w-full z-30 top-0"></app-nav-bar>
+<div class="absolute w-full top-20" id="content-container">
   <router-outlet></router-outlet>
 </div>
-
