--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,9 +1,11 @@
-<nav id="header" class="fixed w-full z-30 top-0 border-b">
-    <div class="flex flex-row justify-between p-6">
-        <div class="basis-1/4">
-            <a routerLink="/" (click)="isMenuOpen = false"><h1 class="uppercase text-xl">CKM Photography</h1></a>
+<nav id="header" class="border-b">
+    <div class="flex flex-row justify-between p-6 items-center h-full">
+        <div class="basis-3/4 lg:basis-1/4">
+            <a routerLink="/" (click)="isMenuOpen = false">
+                <h1 class="uppercase lg:text-xl text-lg">CKM Photography</h1>
+            </a>
         </div>
-        <section class="mobile-menu md:hidden">
+        <section class="mobile-menu lg:hidden">
             <input class="checkbox" type="checkbox" name="menu-open" id="open-menu" [(ngModel)]="isMenuOpen" />
             <div class="space-y-2 hamburger-lines" id="hamburger-menu-icon">
                 <span class="block w-7 h-0.5 bg-gray-600 line1"></span>
@@ -13,26 +15,30 @@
 
             <!-- ToDo: Load menu from file -->
             <div class="mobile-menu-items mt-9">
-                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/gallery" (click)="isMenuOpen = false">Gallery</button>
-                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about" (click)="isMenuOpen = false">Trips</button>
-                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog" (click)="isMenuOpen = false">About</button>
-                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog" (click)="isMenuOpen = false">Blog</button>
+                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/gallery"
+                    (click)="isMenuOpen = false">Gallery</button>
+                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about"
+                    (click)="isMenuOpen = false">Trips</button>
+                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog"
+                    (click)="isMenuOpen = false">About</button>
+                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog"
+                    (click)="isMenuOpen = false">Blog</button>
             </div>
         </section>
 
-        <div class="basis-2/4 flex justify-center hidden md:flex">
+        <div class="basis-2/4 flex justify-center hidden lg:flex">
             <!-- ToDo: Load menu from file -->
             <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/gallery">Gallery</button>
             <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about">Trips</button>
             <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog">About</button>
             <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog">Blog</button>
         </div>
-        <div class="basis-1/4 flex justify-end hidden md:flex" id="socials">
+        <div class="basis-1/4 flex justify-end hidden lg:flex" id="socials">
             <div id="social-links">
                 <a class="p-1" href="https://instagram.com/zahmoose" target="_blank">IG</a>
                 <a class="p-1" href="https://500px.com/p/kennethmartens93" target="_blank">500PX</a>
             </div>
-            
+
             <span class="ml-2"> New Work </span>
         </div>
 
