--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -1,3 +1,8 @@
+nav {
+    width: 100%;
+    height: 80px;
+}
+
 #social-links {
     border-right: 1px solid;
     padding: 0px 8px;
@@ -5,10 +10,6 @@
 
 #header {
     background-color: white;
-}
-
-nav {
-    max-height: 104px;
 }
 
 .mobile-menu {
@@ -38,7 +39,7 @@ nav .checkbox {
     cursor: pointer;
 }
 
-.mobile-menu-items{
+.mobile-menu-items {
     background-color: white;
     position: absolute;
     display: flex;
@@ -60,29 +61,28 @@ nav .checkbox {
     transform-origin: 0% 0%;
     transition: transform 0.4s ease-in-out;
 }
-  
+
 #hamburger-menu-icon .line2 {
     transition: transform 0.2s ease-in-out;
 }
-  
+
 #hamburger-menu-icon .line3 {
     transform-origin: 0% 100%;
     transition: transform 0.4s ease-in-out;
 }
 
-nav input[type="checkbox"]:checked ~ .mobile-menu-items {
+nav input[type="checkbox"]:checked~.mobile-menu-items {
     transform: translateX(0);
 }
-    
-nav input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
+
+nav input[type="checkbox"]:checked~.hamburger-lines .line1 {
     transform: rotate(45deg);
 }
-    
-nav input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
+
+nav input[type="checkbox"]:checked~.hamburger-lines .line2 {
     transform: scaleY(0);
 }
-    
-nav input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
+
+nav input[type="checkbox"]:checked~.hamburger-lines .line3 {
     transform: rotate(-45deg);
 }
-  
