--- a/src/app/components/photo-gallery/photo-gallery.component.html
+++ b/src/app/components/photo-gallery/photo-gallery.component.html
@@ -1,8 +1,5 @@
-<div class="container mx-auto">
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 items-stretch p-3 lg:p-0">
-        <app-gallery-item *ngFor="let photo of photos | async" 
-            [galleryItem]="photo" 
-            [ngClass]="{'row-span-2': photo.orientation === 'Portrait'}">
-        </app-gallery-item>
-    </div>
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 items-stretch m-3 lg:p-0">
+    <app-gallery-item *ngFor="let photo of photos | async" [galleryItem]="photo"
+        [ngClass]="{'row-span-2': photo.orientation === 'Portrait'}">
+    </app-gallery-item>
 </div>
