--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,3 +1,11 @@
-<div>
-    <img src="../../../assets/about-page/The-Martens-423.jpg" />
+<div class="flex" id="about-story-landing">
+    <div class="image-with-overlay-container">
+        <img class="bg-blend-darken" src="../../../assets/about-page/The-Martens-423.jpg" />
+        <div class="image-overlay"></div>
+    </div>
+
+    <div class="flex items-center justify-center content-center absolute w-full h-full text-white flex-col mt-10">
+        <h2 class="lg:text-3xl text-xl font-thin">Our Story</h2>
+        <h1 class="lg:text-5xl text-3xl"> Corrina & Kenneth Martens</h1>
+    </div>
 </div>
