--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav id="header" class="border-b">
+<nav id="header">
     <div class="flex flex-row justify-between p-6 items-center h-full">
         <div class="basis-3/4 lg:basis-1/4">
             <a routerLink="/" (click)="isMenuOpen = false">
@@ -14,12 +14,12 @@
             </div>
 
             <!-- ToDo: Load menu from file -->
-            <div class="mobile-menu-items mt-9">
+            <div class="mobile-menu-items">
                 <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/gallery"
                     (click)="isMenuOpen = false">Gallery</button>
-                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about"
+                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/trips"
                     (click)="isMenuOpen = false">Trips</button>
-                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog"
+                <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about"
                     (click)="isMenuOpen = false">About</button>
                 <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog"
                     (click)="isMenuOpen = false">Blog</button>
@@ -29,8 +29,8 @@
         <div class="basis-2/4 flex justify-center hidden lg:flex">
             <!-- ToDo: Load menu from file -->
             <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/gallery">Gallery</button>
-            <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about">Trips</button>
-            <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog">About</button>
+            <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/trips">Trips</button>
+            <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/about">About</button>
             <button class="px-2 uppercase hover:underline text-sm md:text-base" routerLink="/blog">Blog</button>
         </div>
         <div class="basis-1/4 flex justify-end hidden lg:flex" id="socials">
