--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -1,6 +1,8 @@
+@use 'src/app/shared/variables' as global;
+
 nav {
     width: 100%;
-    height: 80px;
+    height: global.$top-nav-bar-height;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -47,7 +49,7 @@ nav .checkbox {
     flex-direction: column;
     right: 0;
     width: 100%;
-    height: calc(100vh - 104px);
+    height: calc(100vh - global.$top-nav-bar-height);
     transform: translateX(1000px);
     transition: transform 0.5s ease-in-out;
     padding: 0px 32px 32px 32px;
