--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex" id="about-story-landing">
+<div class="image-overlay-landing-screen flex" id="about-story-landing">
     <div class="image-with-overlay-container">
         <img class="bg-blend-darken" src="../../../assets/about-page/The-Martens-423.jpg" />
         <div class="image-overlay"></div>
@@ -8,4 +8,8 @@
         <h2 class="lg:text-3xl text-xl font-thin">Our Story</h2>
         <h1 class="lg:text-5xl text-3xl"> Corrina & Kenneth Martens</h1>
     </div>
+</div>
+
+<div class="container mx-auto p-2 bg-white">
+    Corrina and Kenneth met through their biggest common passion: photography.
 </div>
