CSS fixes for mobile

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,15 +1,20 @@
-<div class="image-overlay-landing-screen flex" id="about-story-landing">
+<div class="image-overlay-landing-screen flex relative" id="about-story-landing">
     <div class="image-with-overlay-container">
         <img class="bg-blend-darken" src="../../../assets/about-page/The-Martens-423.jpg" />
         <div class="image-overlay"></div>
     </div>
 
-    <div class="flex items-center justify-center content-center absolute w-full h-full text-white flex-col mt-10">
+    <div
+        class="flex items-center justify-center content-center absolute w-full h-full text-white flex-col mt-6 lg:mt-10">
         <h2 class="lg:text-3xl text-xl font-thin">Our Story</h2>
         <h1 class="lg:text-5xl text-3xl"> Corrina & Kenneth Martens</h1>
     </div>
 </div>
 
 <div class="container mx-auto p-2 bg-white">
-    Corrina and Kenneth met through their biggest common passion: photography.
+    Corrina and Kenneth met through their biggest common passion: photography. They met during the Covid-19 pandemic --
+    Kenneth lived in the Netherands, while Corrina was situated in the US.
+    During that time, they communicated daily, mostly calling. Things started looking up for the international couple,
+    and some of the travel restrictions were lifted. They were finally able to be physically together.
+
 </div>
