Decent about page look

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,20 +1,79 @@
-<div class="image-overlay-landing-screen flex relative" id="about-story-landing">
-    <div class="image-with-overlay-container">
-        <img class="bg-blend-darken" src="../../../assets/about-page/The-Martens-423.jpg" />
-        <div class="image-overlay"></div>
-    </div>
+<main>
+    <section class="image-overlay-landing-screen flex relative" id="about-story-landing">
+        <div class="image-with-overlay-container">
+            <img class="bg-blend-darken" src="../../../assets/about-page/The-Martens-423.jpg" />
+            <div class="image-overlay"></div>
+        </div>
 
-    <div
-        class="flex items-center justify-center content-center absolute w-full h-full text-white flex-col mt-6 lg:mt-10">
-        <h2 class="lg:text-3xl text-xl font-thin">Our Story</h2>
-        <h1 class="lg:text-5xl text-3xl"> Corrina & Kenneth Martens</h1>
-    </div>
-</div>
+        <div
+            class="flex items-center justify-center content-center absolute w-full h-full text-white flex-col mt-6 lg:mt-10">
+            <h2 class="lg:text-3xl text-xl font-thin">Our Story</h2>
+            <h1 class="lg:text-5xl text-3xl"> Corrina & Kenneth Martens</h1>
+        </div>
+    </section>
 
-<div class="container mx-auto p-2 bg-white">
-    Corrina and Kenneth met through their biggest common passion: photography. They met during the Covid-19 pandemic --
-    Kenneth lived in the Netherands, while Corrina was situated in the US.
-    During that time, they communicated daily, mostly calling. Things started looking up for the international couple,
-    and some of the travel restrictions were lifted. They were finally able to be physically together.
+    <section class="container mx-auto p-6 flex flex-col items-center" id="about-me-introduction-container">
+        <h1 class="flex-row text-xl lg:text-3xl border-b-[1px] border-teal-500 p-2 w-1/2 text-center m-2 lg:m-6">The
+            Meeting
+        </h1>
+        <div class="two-col-text flex-col lg:flex-row">
+            <p>
+                Corrina and Kenneth met in 2019 through their biggest common passion: photography. They met during the
+                Covid-19
+                pandemic
+                --
+                Kenneth lived in the Netherands, while Corrina was situated in the US.
+                During that time, they communicated daily being incredibly complex given time zones. In the summer of
+                2020
+                things started
+                looking
+                up for the international couple,
+                and some of the travel restrictions were lifted. They were finally able to be physically together. They
+                overcame
+                the distance, and decided to be together permanently.
+                They married in February and currently reside in the United States with their three cats: Rou, Stevie,
+                and
+                Willow.
+            </p>
 
-</div>
+            <p>
+                Besides photography, Corrina and Kenneth are passionate about wildlife, ecology, zoology, and travel. On
+                one
+                of
+                their most recent trips to North and South Dakota, they met Steve and Kathy Leonardi who inspired them
+                to
+                take
+                their passion for photography and travel to the next level
+                and combine them in a business. With Steve's help, the couple started their newest and biggest adventure
+                yet!
+
+                <br /><br />
+                Keep on scrolling, and learn more about the individuals!
+            </p>
+        </div>
+    </section>
+
+    <section class="parallax goat-image flex justify-center items-center">
+        <h1 class="text-3xl" style="color: white;">Meet Corrina & Kenneth</h1>
+    </section>
+
+    <section class="conatiner mx-auto p-6 bg-white" id="about-me-persona">
+        <div class="persona-container justify-center flex-row flex">
+            <div class="persona flex-col items-center">
+                <img src="../../../assets/persona/Kenneth Martens.jpg">
+                <h1
+                    class="flex-row text-xl lg:text-3xl border-b-[1px] border-teal-500 p-2 w-1/2 text-center m-2 lg:m-6">
+                    Kenneth
+                </h1>
+            </div>
+
+            <div class="persona flex-col items-center">
+                <img src="../../../assets/persona/Corrina Martens.jpg">
+                <h1
+                    class="flex-row text-xl lg:text-3xl border-b-[1px] border-teal-500 p-2 w-1/2 text-center m-2 lg:m-6">
+                    Corrina
+                </h1>
+            </div>
+        </div>
+    </section>
+</main>
