--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -1,12 +1,33 @@
 @use 'src/app/shared/variables' as global;
 
 
+main {
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+    perspective: 2px;
+}
+
+section {
+    transform-style: preserve-3d;
+}
+
 /** Tailwind LG screen */
 @media (min-width: 1024px) {
     .image-overlay-landing-screen {
-        height: calc(100vh - 2 * global.$top-nav-bar-height);
+        height: calc(100vh - 1.5 * global.$top-nav-bar-height);
     }
 
+    .two-col-text>p {
+        width: 50%;
+    }
+
+    .persona-container .persona>img {
+        border-radius: 50%;
+        object-fit: cover;
+        height: 256px !important;
+        width: 256px !important;
+    }
 }
 
 .image-with-overlay-container {
@@ -27,4 +48,65 @@
     object-fit: cover;
     height: 100%;
     width: 100%;
+}
+
+.two-col-text {
+    display: flex;
+    flex-grow: 0;
+}
+
+.two-col-text>p {
+
+    margin: 16px;
+    text-overflow: ellipsis;
+}
+
+.divider {
+    border: 1px solid #45b97e;
+}
+
+.persona-container .persona>img {
+    border-radius: 50%;
+    object-fit: cover;
+    height: 128px;
+    width: 128px;
+}
+
+.persona-container>.persona {
+    width: 50%;
+    justify-content: center;
+    display: flex;
+}
+
+.parallax {
+    /* Set a specific height */
+    min-height: 400px;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.parallax-bg::after {
+    // background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../../assets/2022Dakota/landscape-6.jpg");
+    background-size: cover;
+}
+
+.goat-image {
+    /* The image used */
+    background-image: url("../../../assets/2022Dakota/landscape-6.jpg");
+}
+
+.parallax::after {
+    content: " ";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateZ(-1px) scale(1.5);
+    background-size: 100%;
+    z-index: -1;
 }
