--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -10,6 +10,7 @@ main {
 
 section {
     transform-style: preserve-3d;
+    min-height: 60vh;
 }
 
 /** Tailwind LG screen */
@@ -86,11 +87,6 @@ section {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.parallax-bg::after {
-    // background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../../assets/2022Dakota/landscape-6.jpg");
     background-size: cover;
 }
 
