--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -49,7 +49,7 @@ nav .checkbox {
     flex-direction: column;
     right: 0;
     width: 100%;
-    height: calc(100vh - global.$top-nav-bar-height);
+    height: 100vh;
     transform: translateX(1000px);
     transition: transform 0.5s ease-in-out;
     padding: 0px 32px 32px 32px;
