--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -16,7 +16,7 @@
         <h1 class="flex-row text-xl lg:text-3xl border-b-[1px] border-teal-500 p-2 w-1/2 text-center m-2 lg:m-6">The
             Meeting
         </h1>
-        <div class="two-col-text flex-col lg:flex-row">
+        <div class="two-col-text flex-col md:flex-row">
             <p>
                 Corrina and Kenneth met in 2020 through their biggest common passion: photography. They met during the
                 Covid-19
@@ -53,18 +53,29 @@
         </div>
     </section>
 
-    <section class="parallax goat-image flex justify-center items-center">
+    <section class="parallax image1 flex justify-center items-center">
         <h1 class="text-3xl" style="color: white;">Meet Corrina & Kenneth</h1>
     </section>
 
-    <section class="conatiner mx-auto p-6 bg-white" id="about-me-persona">
-        <div class="persona-container justify-center flex-row flex">
+    <section class="conatiner mx-auto p-6 bg-white" id="about-us-persona">
+        <div class="persona-container justify-center items-start flex-col md:flex-row flex">
             <div class="persona flex-col items-center">
                 <img src="../../../assets/persona/Kenneth Martens.jpg">
                 <h1
                     class="flex-row text-xl lg:text-3xl border-b-[1px] border-teal-500 p-2 w-1/2 text-center m-2 lg:m-6">
                     Kenneth
                 </h1>
+                <div class="p-4">
+                    Kenneth studied Software Engineering at Fontys University of Applies Sciences in Eindhoven. He is
+                    working as a software engineer by trade. He works as a backend developer in an event-based
+                    microservices application.
+
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.
+                </div>
             </div>
 
             <div class="persona flex-col items-center">
@@ -73,7 +84,20 @@
                     class="flex-row text-xl lg:text-3xl border-b-[1px] border-teal-500 p-2 w-1/2 text-center m-2 lg:m-6">
                     Corrina
                 </h1>
+                <div class="p-4">
+                    Corrina double majored in Zoology and Environmental Science at Miami University, where she graduated
+                    with her Bachelor’s Degree in 2013. As an undergraduate, she did research on the genetic diversity
+                    of the European wall lizard and interactions with adenylate cyclase toxins. After graduation, she
+                    attended the University of Cincinnati to pursue her Master of Science in Biological Sciences, with a
+                    focus in Reproductive Biology. She was awarded the University Graduate Scholarship for doing
+                    research in collaboration with the Cincinnati Zoo & Botanic Garden and Cincinnati Children’s
+                    Hospital on polar bear reproduction.
+                </div>
             </div>
         </div>
+    </section>
+
+    <section class="parallax image2 flex justify-center items-center">
+        <h1 class="text-3xl" style="color: white;">Meet The Cats</h1>
     </section>
 </main>
