--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -22,6 +22,10 @@ section {
         width: 50%;
     }
 
+    .persona-container>.persona {
+        width: 50%;
+    }
+
     .persona-container .persona>img {
         border-radius: 50%;
         object-fit: cover;
@@ -61,7 +65,7 @@ section {
 
 .two-col-text>p {
 
-    margin: 16px;
+    margin: 1rem;
     text-overflow: ellipsis;
 }
 
@@ -77,7 +81,6 @@ section {
 }
 
 .persona-container>.persona {
-    width: 50%;
     justify-content: center;
     display: flex;
 }
@@ -93,9 +96,12 @@ section {
     background-size: cover;
 }
 
-.goat-image {
-    /* The image used */
+.image1 {
     background-image: url("../../../assets/2022Dakota/landscape-6.jpg");
+}
+
+.image2 {
+    background-image: url("../../../assets/2022Dakota/landscape-3.jpg");
 }
 
 .parallax::after {
