--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -61,11 +61,17 @@
         <div class="persona-container justify-center items-start flex-col md:flex-row flex">
             <app-persona class="flex justify-center" *ngFor="let persona of personaInfo | async" [persona]="persona">
             </app-persona>
-
         </div>
     </section>
 
     <section class="parallax image2 flex justify-center items-center">
         <h1 class="text-3xl" style="color: white;">Meet The Cats</h1>
+    </section>
+
+    <section class="conatiner mx-auto p-6 bg-white" id="about-us-persona">
+        <div class="persona-container justify-evenly items-center flex-col md:flex-row flex">
+            <app-persona class="flex justify-center" *ngFor="let persona of personaCats | async" [persona]="persona">
+            </app-persona>
+        </div>
     </section>
 </main>
