--- a/src/app/components/persona/persona.component.html
+++ b/src/app/components/persona/persona.component.html
@@ -1,5 +1,8 @@
 <div class="persona flex-col items-center" *ngIf="persona">
-    <img src="{{persona.imageUrl}}">
+    <img src="{{persona.imageUrl}}" alt="{{persona.name}}" (load)="this.isLoading = false"
+        [ngClass]="{'invisible': isLoading}">
+    <div class="image-loading-indicator bg-slate-200" [ngClass]="{'animate-pulse': isLoading}"
+        [ngClass]="{'hidden': !isLoading}"></div>
     <h1 class="flex-row text-xl lg:text-3xl border-b-[1px] border-teal-500 p-2 w-1/2 text-center m-2 lg:m-6">
         {{persona.name}}
     </h1>
