--- a/src/app/components/persona/persona.component.scss
+++ b/src/app/components/persona/persona.component.scss
@@ -10,6 +10,13 @@
     display: flex;
 }
 
+.persona>.image-loading-indicator {
+    border-radius: 50%;
+    object-fit: cover;
+    height: 128px;
+    width: 128px;
+}
+
 /** Tailwind LG screen */
 @media (min-width: 1024px) {
 
@@ -18,5 +25,12 @@
         object-fit: cover;
         height: 256px !important;
         width: 256px !important;
+    }
+
+    .persona>.image-loading-indicator {
+        border-radius: 50%;
+        object-fit: cover;
+        height: 128px;
+        width: 128px;
     }
 }
