--- a/src/app/shared/variables.scss
+++ b/src/app/shared/variables.scss
@@ -38,6 +38,13 @@ section {
     z-index: -1;
 }
 
+/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
+@media only screen and (max-device-width: 1366px) {
+    .parallax {
+        background-attachment: scroll;
+    }
+}
+
 /**
     Background layers
 */
