--- a/src/app/components/photo-gallery/photo-gallery.component.html
+++ b/src/app/components/photo-gallery/photo-gallery.component.html
@@ -1,5 +1,15 @@
+<div class="gallery-menu-bar flex flex-row bg-teal-500 items-center text-white">
+    <div class="basis-1/4 p-6">
+        <a routerLink="/gallery">back</a>
+    </div>
+
+    <div class="basis-2/4 flex justify-center"> {{galleryName$ | async}}</div>
+
+
+</div>
+
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 items-stretch m-3 lg:p-0">
-    <app-gallery-item *ngFor="let photo of photos | async" [galleryItem]="photo"
+    <app-gallery-item *ngFor="let photo of photos$ | async" [galleryItem]="photo"
         [ngClass]="{'row-span-2': photo.orientation === 'Portrait'}">
     </app-gallery-item>
 </div>
