--- a/src/app/pages/galleries-page/galleries-page.component.html
+++ b/src/app/pages/galleries-page/galleries-page.component.html
@@ -1,4 +1,4 @@
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 p-3">
-    <app-gallery-item *ngFor="let gallery of galleries" [galleryItem]="gallery" [isGallery]="true"
+    <app-gallery-item *ngFor="let gallery of galleries$ | async" [galleryItem]="gallery" [isGallery]="true"
         routerLink="{{gallery.id}}"></app-gallery-item>
 </div>
