--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -6,8 +6,7 @@ nav {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-#social-links {
-    border-right: 1px solid;
+.social-links {
     padding: 0px 8px;
 }
 
@@ -88,4 +87,31 @@ nav input[type="checkbox"]:checked~.hamburger-lines .line2 {
 
 nav input[type="checkbox"]:checked~.hamburger-lines .line3 {
     transform: rotate(-45deg);
+}
+
+.social-links fa-icon {
+    font-size: 1.5rem;
+
+    &:hover {
+        color: global.$primary-color  !important;
+        font-size: 1.6rem;
+    }
+}
+
+button {
+    transition: 0.2s all ease;
+}
+
+button:hover {
+    transition: 0.2s all ease;
+    color: global.$primary-color  !important;
+    border-bottom: 1px solid global.$primary-color;
+    transform: scale(1.1);
+}
+
+.divider {
+    width: 1px;
+    height: 100%;
+    height: 30px;
+    background-color: #212121;
 }
