--- a/src/app/shared/variables.scss
+++ b/src/app/shared/variables.scss
@@ -1,6 +1,14 @@
 $primary-color: rgb(20, 184, 166);
 $top-nav-bar-height: 80px;
 
+fa-icon {
+
+    &:hover {
+        font-size: 1.1rem;
+        transition: 0.2s all ease;
+    }
+}
+
 /**
     Back to top wrapper
 */
