Start implementing a snackbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <div class="absolute w-full top-20" id="content-container">
   <router-outlet></router-outlet>
 </div>
+<app-snackbar></app-snackbar>
