--- a/src/app/shared/variables.scss
+++ b/src/app/shared/variables.scss
@@ -1,6 +1,9 @@
 $primary-color: rgb(20, 184, 166);
 $top-nav-bar-height: 80px;
 
+$text-color-white: #ffffffb3;
+$snackbar-background-color: #323232;
+
 fa-icon {
 
     &:hover {
