--- a/src/app/components/snackbar/snackbar.component.scss
+++ b/src/app/components/snackbar/snackbar.component.scss
@@ -26,7 +26,7 @@
     padding: 16px;
     margin: 16px;
     border-radius: 8px;
-    max-width: 50vw;
+    max-width: 98vw;
     min-width: 25vw;
     color: global.$text-color-white;
     background: global.$snackbar-background-color;
@@ -47,4 +47,16 @@
     text-transform: uppercase;
     font-size: 0.8em;
     cursor: pointer;
+    flex-shrink: 0;
+
+    &:first-child {
+        margin: 0px 8px;
+    }
+}
+
+/** Tailwind LG screen */
+@media (min-width: 1024px) {
+    .snackbar {
+        max-width: 60vw;
+    }
 }
